--- a/webapp/locales/en_US.json
+++ b/webapp/locales/en_US.json
@@ -915,6 +915,7 @@
   "Stop all services": "Stop all services",
   "Storage": "Storage",
   "Storager": "Storager",
+  "Storage backup parameters": "Storage backup parameters",
   "Storage Registration": "Storage Registration",
   "Store": "Store",
   "Store data": "Store data",
