--- a/webapp/locales/pt_BR.json
+++ b/webapp/locales/pt_BR.json
@@ -918,6 +918,7 @@
   "Stop all services": "Parar todos serviços",
   "Storage": "Armazenamento",
   "Storager": "Armazenamento",
+  "Storage backup parameters": "Parametros do backup do armazenamento",
   "Storage Registration": "Registro do Armazenamento",
   "Store": "Armazenar",
   "Store data": "Servidor de Dados Destino",
