--- a/webapp/locales/en_US.json
+++ b/webapp/locales/en_US.json
@@ -614,6 +614,7 @@
 	"Monitored object analysis": "Monitored object analysis",
 	"Monitored object analysis result": "Monitored object analysis result",
 	"Monitored object attributes": "Monitored object attributes",
+	"Months": "Months",
 	"More than one shapefile found!": "More than one shapefile found!",
 	"Multiplier": "Multiplier",
 	"Must have a valid store values to create an intersection": "Must have a valid store values to create an intersection",
@@ -1048,6 +1049,7 @@
 	"We could not find the page you were looking for. Meanwhile, you may ": "We could not find the page you were looking for. Meanwhile, you may ",
 	"Wednesday": "Wednesday",
 	"Weekly": "Weekly",
+	"Weeks": "Weeks",
 	"Weight average neighbor": "Weight average neighbor",
 	"When the value is 0, it will use thread number supported by the server": "When the value is 0, it will use thread number supported by the server",
 	"When value is 0, the default will be supported threads by server": "When value is 0, the default will be supported threads by server",
