--- a/webapp/locales/es_ES.json
+++ b/webapp/locales/es_ES.json
@@ -405,7 +405,9 @@
 	"Seconds": "Segundos",
 	"Hours": "Horas",
 	"Minutes": "Minutos",
+	"Months": "Meses",
 	"Weekly": "Semanal",
+	"Weeks": "Semana",
 	"Grid Data Series": "Serie de Datos de Cuadrícula",
 	"Start Time": "Hora de inicio",
 	"Frequency": "Frecuencia",
