--- a/webapp/locales/pt_BR.json
+++ b/webapp/locales/pt_BR.json
@@ -627,6 +627,7 @@
   "Monitored object analysis": "Análise de objeto monitorado",
   "Monitored object analysis result": "Resultado de análise com Objeto Monitorado",
   "Monitored object attributes": "Atributos do objeto monitorado",
+	"Months": "Meses",
   "More than one shapefile found!": "Mais de um shapefile encontrados!",
   "Multiplier": "Multiplicador",
   "Must have a valid store values to create an intersection": "Configuração de armazenamento deve ser válida para criar interseção",
@@ -1052,6 +1053,7 @@
   "Wednesday": "Quarta-feira",
   "Weight average neighbor": "Vizinho médio ponderado",
   "Weekly": "Semanalmente",
+  "Weeks": "Semanas",
   "When the value is 0, it will use thread number supported by the server": "Quando o valor for 0, será utilizado o número de threads suportado pelo servidor",
   "When value is 0, the default will be supported threads by server": "Quando o valor é 0, o padrão de threads será definido pelo servidor",
   "Wild fire event (ESRI Shapefile)": "Evento de queimada (ESRI Shapefile)",
