Melhorias no layout

--- a/webapp/locales/en_US.json
+++ b/webapp/locales/en_US.json
@@ -165,6 +165,10 @@
   "Cancel": "Cancel",
   "Cell phone": "Cell phone",
   "Cellphone": "Cellphone",
+  "Chart": "Chart",
+  "Chart description is required": "Chart description is required",
+  "Chart name is required": "Chart name is required",
+  "Chart type is required": "Chart type is required",
   "Check Connection": "Check Connection",
   "Checking": {
     "": {
@@ -306,6 +310,7 @@
   "Default": "Default",
   "Default Level Name": "Default Level Name",
   "Default type": "Default type",
+  "Delimiter": "Delimiter",
   "Delimiter character": "Delimiter character",
   "Dependency failed - key must exist": "Dependency failed - key must exist",
   "Description": "Description",
@@ -576,6 +581,7 @@
   "Longitude is invalid": "Longitude is invalid",
   "Main Navigation": "Main Navigation",
   "Manual": "Manual",
+  "Map": "Map",
   "Map Display": "Map Display",
   "Map server error": "Map server error: ",
   "Maps Server Connection": "Maps Server Connection",
@@ -895,6 +901,7 @@
     }
   },
   "States": "States",
+  "STATIC-HTTP": "STATIC-HTTP",
   "Static": "Static",
   "Static Data": "Static Data",
   "Static Data Registration": "Static Data Registration",
@@ -906,6 +913,7 @@
   "Stop": "Stop",
   "Stop all": "Stop all",
   "Stop all services": "Stop all services",
+  "Storage": "Storage",
   "Storager": "Storager",
   "Store": "Store",
   "Strategy": "Strategy",
@@ -975,6 +983,7 @@
   "Type to search": "Type to search",
   "Unconfigured Data Series storage": "Unconfigured Data Series storage",
   "Union": "Union",
+  "Unit is required": "Unit is required",
   "Unknown property (not in schema)": "Unknown property (not in schema)",
   "User": "User",
   "User Analisys Select": "User Analisys Select",
@@ -1080,6 +1089,7 @@
   "d": "d",
   "deleted": "deleted",
   "entries": "entries",
+  "Filtered Features table":"Filtered Features table",
   "filtered from": "filtered from",
   "folder": "folder",
   "h": "h",
