--- a/webapp/locales/pt_BR.json
+++ b/webapp/locales/pt_BR.json
@@ -146,6 +146,10 @@
   "Buffer": "Buffer",
   "Bytes After": "Bytes posteriores",
   "Bytes Before": "Bytes anteriores",
+  "Chart": "Gráfico",
+  "Chart description is required": "Descrição do gráfico é obrigatório.",
+  "Chart name is required": "Nome do gráfico é obrigatório.",
+  "Chart type is required": "Tipo do gráfico é obrigatório.",
   "CSV Format": "Formato do CSV",
   "CTL File": "Arquivo CTL",
   "Can not delete the alert if the service is not running": {
@@ -308,6 +312,7 @@
   "Default": "Padrão",
   "Default Level Name": "Nome do Nível Padrão",
   "Default type": "Tipo padrão",
+  "Delimiter": "Delimitador",
   "Delimiter character": "Caractere delimitador",
   "Dependency failed - key must exist": "Falha na dependência - a chave deve existir",
   "Description": "Descrição",
@@ -589,6 +594,7 @@
   "Longitude is invalid": "Longitude é inválida",
   "Main Navigation": "Navegação Principal",
   "Manual": "Manual",
+  "Map": "Mapa",
   "Map Display": "Tela do Mapa",
   "Map server error": "Erro no servidor de mapas: ",
   "Maps Server Connection": "Conexão com o Servidor de Mapas",
@@ -897,6 +903,7 @@
       }
     }
   },
+  "STATIC-HTTP": "STATIC-HTTP",
   "States": "Estados",
   "Static": "Estático",
   "Static Data": "Dados Estáticos",
@@ -909,6 +916,7 @@
   "Stop": "Parar",
   "Stop all": "Parar todos",
   "Stop all services": "Parar todos serviços",
+  "Storage": "Armazenamento",
   "Storager": "Armazenamento",
   "Store": "Armazenar",
   "Strategy": "Estratégia",
@@ -1083,6 +1091,7 @@
   "d": "d",
   "deleted": "removido",
   "entries": "registros",
+  "Filtered Features table":"Tabela de recursos filtrados",
   "filtered from": "filtrados de",
   "folder": "pasta",
   "h": "h",
