--- a/webapp/locales/es_ES.json
+++ b/webapp/locales/es_ES.json
@@ -45,6 +45,7 @@
 	"GRID": "GRID",
 	"Version": "Versión",
 	"Dynamic": "Dinámico",
+	"Filtered Features table (PostgreSQL/PostGIS)": "Visiones de Tablas (PostgreSQL/PostGIS)",
 	"Data Provider Registration": "Registro del Proveedor de Datos",
 	"Data Provider Name": "Nombre del Proveedor de Datos",
 	"Description": "Descripción",
