--- a/webapp/locales/es_ES.json
+++ b/webapp/locales/es_ES.json
@@ -24,6 +24,7 @@
   "10": "10",
   "11": "11",
   "12": "12",
+  "STATIC-HTTP": "STATIC-HTTP",
 	"Static Data": "Datos Estáticos",
 	"User": "Usuario",
 	"Online": "En línea",
@@ -44,6 +45,10 @@
 	"PCD": "PCD",
 	"GRID": "GRID",
 	"Version": "Versión",
+	"Chart": "Gráfico",
+	"Chart description is required": "Descripción del gráfico es obligatorio.",
+	"Chart name is required": "Nombre del gráfico es obligatorio.",
+	"Chart type is required": "Tipo del gráfico es obligatorio.",
 	"Dynamic": "Dinámico",
 	"Filtered Features table (PostgreSQL/PostGIS)": "Visiones de Tablas (PostgreSQL/PostGIS)",
 	"Data Provider Registration": "Registro del Proveedor de Datos",
@@ -73,6 +78,7 @@
 	"%d Dia": "%d Día",
 	"Timezone": "Zona horaria",
 	"Data Set Path": "Ruta de Conjunto de Datos.",
+	"Filtered Features table":"Tabla de características filtradas",
 	"Filter": "Filtrar",
 	"Filter by Date": "Filtrar por Fecha",
 	"Yes": "Sí",
@@ -246,6 +252,7 @@
 	"Test connection": "Conexión de prueba",
 	"Users Handling": "Manipulación de los usuarios",
 	"Data Provider": "Proveedor de Datos",
+	"Map": "Mapa",
 	"Map Display": "Visualización del Mapa",
 	"Service Description": "Descripción del Servicio",
 	"Ssh Hostname": "Nombre de host Ssh",
@@ -608,6 +615,7 @@
 	"Bytes After": "",
 	"Additional items not allowed": "",
 	"DCP CSV": "",
+	"Delimiter": "Delimitador",
 	"Delimiter character": "",
 	"Time Interval Unit": "",
 	"Notification emails is required": "",
