Fixed translation of the group layers

--- a/webmonitor/locales/en.json
+++ b/webmonitor/locales/en.json
@@ -43,7 +43,7 @@
   "December": "December",
   "Description": "Description",
   "Digital platform of monitoring and warning of forest fires in the Brazilian Cerrado (World Bank TF018566)": "Digital platform of monitoring and warning of forest fires in the Brazilian Cerrado (World Bank TF018566)",
-  "Dynamic Data": "Dynamic Data",
+  "Dynamic data": "Dynamic Data",
   "entries": "entries",
   "Export Data": "Export Data",
   "Exportation": "Exportation",
@@ -102,7 +102,7 @@
   "Showing 0 to 0 of 0 entries": "Showing 0 to 0 of 0 entries",
   "Sign In": "Sign In",
   "Sign out": "Sign out",
-  "Static Data": "Static Data",
+  "Static data": "Static Data",
   "Templates": "Templates",
   "to": "to",
   "To": "To",
