--- a/webmonitor/locales/es.json
+++ b/webmonitor/locales/es.json
@@ -42,7 +42,7 @@
   "December": "Diciembre",
   "Description": "Descripción",
   "Digital platform of monitoring and warning of forest fires in the Brazilian Cerrado (World Bank TF018566)": "Plataforma digital de monitoreo y alerta de incendios forestales en el Cerrado brasileño (Banco Mundial TF018566).",
-  "Dynamic Data": "Datos Dinámicos",
+  "Dynamic data": "Datos Dinámicos",
   "entries": "entradas",
   "Export Data": "Exportar datos",
   "Exportation": "Exportación",
@@ -101,7 +101,7 @@
   "Showing 0 to 0 of 0 entries": "Mostrando 0 a 0 de 0 entradas",
   "Sign In": "Ingresar",
   "Sign out": "Cerrar sesión",
-  "Static Data": "Datos Estáticos",
+  "Static data": "Datos Estáticos",
   "Templates": "Templates",
   "to": "para",
   "To": "Para",
