--- a/webmonitor/locales/pt.json
+++ b/webmonitor/locales/pt.json
@@ -43,7 +43,7 @@
   "December": "Dezembro",
   "Description": "Descrição",
   "Digital platform of monitoring and warning of forest fires in the Brazilian Cerrado (World Bank TF018566)": "Plataforma digital para monitoramento e alerta de fogo na vegetação no Cerrado brasileiro (Banco Mundial TF018566)",
-  "Dynamic Data": "Dados Dinâmicos",
+  "Dynamic data": "Dados Dinâmicos",
   "entries": "registros",
   "Export Data": "Exportar Dados",
   "Exportation": "Exportação",
@@ -102,7 +102,7 @@
   "Showing 0 to 0 of 0 entries": "Exibindo 0 até 0 de 0 registros",
   "Sign In": "Entrar",
   "Sign out": "Sair",
-  "Static Data": "Dados Estáticos",
+  "Static data": "Dados Estáticos",
   "Templates": "Planos de Fundo",
   "to": "até",
   "To": "Até",
