Fixed orthographic error on view registration

--- a/webapp/locales/pt_BR.json
+++ b/webapp/locales/pt_BR.json
@@ -1029,7 +1029,7 @@
   "View Data Series": "Séries de Dados de Visualizações",
   "View Description": "Descrição da Visualização",
   "View Name": "Nome da Visualização",
-  "View Registration": "Registro de Vizualização",
+  "View Registration": "Registro de Visualização",
   "View Service": "Serviço de Visualização",
   "View Service is required": "Serviço de Visualização é obrigatório",
   "View Update": "Atualização da visualização",
