Feat: checkbox addition to check static data source(Features Table)

--- a/webapp/locales/pt_BR.json
+++ b/webapp/locales/pt_BR.json
@@ -1134,5 +1134,6 @@
 	"Custom Class Filter": "Filtros Customizados",
 	"not found.": "não encontrado.",
 	"Filename": "Filename",
-	"Descrição": "Descrição"
+	"Descrição": "Descrição",
+	"Choose available table":"Escolher tabela no banco"
 }
