--- a/webapp/locales/en_US.json
+++ b/webapp/locales/en_US.json
@@ -475,6 +475,7 @@
 	"Ignores previous data to": "Ignores previous data to",
 	"Image Generate": "Image Generate",
 	"Import": "Import",
+	"Choose available table":"Choose available table",
 	"Import CSV": "Import CSV",
 	"Import Shapefile": "Import Shapefile",
 	"Import data": "Import data",
@@ -1170,5 +1171,7 @@
 		" syntax error at or near \"AS\"": "Error in query execution. syntax error at or near \"AS\"",
 		" syntax error at or near \"SELECT\"": "Error in query execution. syntax error at or near \"SELECT\""
 	},
-	"Cannot read property 'replace' of undefined": "Cannot read property 'replace' of undefined"
+	"Cannot read property 'replace' of undefined": "Cannot read property 'replace' of undefined",
+	"Date/Time property": "Date/Time property",
+	"Date/Time mask": "Date/Time mask"
 }
