--- a/webapp/locales/en_US.json
+++ b/webapp/locales/en_US.json
@@ -105,10 +105,7 @@
 	"Analysis script is required": "Analysis script is required",
 	"Analysis type is required": "Analysis type is required",
 	"Analysis will not able to generate a output data": {
-		" ": "Analysis will not able to generate a output data. ",
-		" Please fill at least a add_value() in script field": {
-			"": "Analysis will not able to generate a output data. Please fill at least a add_value() in script field."
-		}
+		" ": "Analysis will not able to generate a output data. "
 	},
 	"Are you sure to remove ?": "Are you sure to remove ?",
 	"Are you sure?": "Are you sure?",
@@ -478,7 +475,7 @@
 	"Ignores previous data to": "Ignores previous data to",
 	"Image Generate": "Image Generate",
 	"Import": "Import",
-	"Choose available table": "Choose available table",
+	"Choose available table":"Choose available table",
 	"Import CSV": "Import CSV",
 	"Import Shapefile": "Import Shapefile",
 	"Import data": "Import data",
@@ -969,8 +966,8 @@
 	"To import this file you need to have at least one view service": "To import this file you need to have at least one view service",
 	"To upload your shapefile you have to create a .zip compressed file containing all the shapefile files (.shp, .dbf, .shx, etc). The size limit is 300 MB per file, therefore, neither of the shapefile files can be larger than 300 MB.": "To upload your shapefile you have to create a .zip compressed file containing all the shapefile files (.shp, .dbf, .shx, etc). The size limit is 300 MB per file, therefore, neither of the shapefile files can be larger than 300 MB.",
 	"Tools": "Tools",
-	"Transfer GeoTIFF": "Transfer GeoTIFF ...",
-	"Transfer Shapefile": "Transfer Shapefile ...",
+	"Transfer GeoTIFF": "Transfer GeoTIFF",
+	"Transfer Shapefile": "Transfer Shapefile",
 	"Tuesday": "Tuesday",
 	"Type": "Type",
 	"Type a projetion": {
@@ -1176,18 +1173,5 @@
 	},
 	"Cannot read property 'replace' of undefined": "Cannot read property 'replace' of undefined",
 	"Date/Time property": "Date/Time property",
-	"Date/Time mask": "Date/Time mask",
-	"Analysis Validation": "Analysis Validation",
-	"The following errors occurred while attempting to validate the analysis": "The following errors occurred while attempting to validate the analysis",
-	"lana is not defined": "lana is not defined",
-	"Query Builder5": "Query Builder5",
-	"Remove attributes configuration": "Remove attributes configuration",
-	"Choose table in the database": "Choose table in the database",
-	"File transfer to create table": "File transfer to create table",
-	"Choose file on the data server": "Choose file on the data server",
-	"File transfer to data server": "File transfer to data server",
-	"tablename is not defined": "tablename is not defined",
-	"View is valid, the query returned undefined register": "View is valid, the query returned undefined register",
-	"Cannot read property 'token' of undefined": "Cannot read property 'token' of undefined",
-	"View is valid, the query returned 1 register": "View is valid, the query returned 1 register"
+	"Date/Time mask": "Date/Time mask"
 }
