feature: checking the existence of tables without using the database v.1.0

--- a/webapp/locales/pt_BR.json
+++ b/webapp/locales/pt_BR.json
@@ -1131,6 +1131,8 @@
 	"Operator": "Operador",
 	"SQL Result": "Resultado(SQL)",
 	"Clause": "Cláusula",
+	"Table name already exists!":"Tabela/View já existe!",
+	"Table name not exists!":"Tabela/Views não existe!",
 	"Custom Class Filter": "Filtros Customizados",
 	"not found.": "não encontrado.",
 	"Filename": "Filename",
