--- a/webapp/locales/en_US.json
+++ b/webapp/locales/en_US.json
@@ -475,7 +475,7 @@
 	"Ignores previous data to": "Ignores previous data to",
 	"Image Generate": "Image Generate",
 	"Import": "Import",
-	"Choose available table":"Choose available table",
+	"Choose available table": "Choose available table",
 	"Import CSV": "Import CSV",
 	"Import Shapefile": "Import Shapefile",
 	"Import data": "Import data",
@@ -1147,6 +1147,8 @@
 	"Table": "Table",
 	"Operator": "Operator",
 	"SQL Result": "SQL Result",
+	"Table name already exists!": "Table name already exists!",
+	"Table name not exists!": "Table/View name not exists!",
 	"Clause": "Clause",
 	"Custom Class Filter": "Custom Class Filter",
 	"not found": {
@@ -1172,5 +1174,17 @@
 	},
 	"Cannot read property 'replace' of undefined": "Cannot read property 'replace' of undefined",
 	"Date/Time property": "Date/Time property",
-	"Date/Time mask": "Date/Time mask"
+	"Date/Time mask": "Date/Time mask",
+	"Choose table in the database": "Choose table in the database",
+	"File transfer to create table": "File transfer to create table",
+	"Remove attributes configuration": "Remove attributes configuration",
+	"View is valid, the query returned 49 registers": "View is valid, the query returned 49 registers",
+	"Table name no exists!": "Table name no exists!",
+	"Choose file on the data server": "Choose file on the data server",
+	"File transfer to data server": "File transfer to data server",
+	"tablename is not defined": "tablename is not defined",
+	"View is valid, the query returned undefined register": "View is valid, the query returned undefined register",
+	"Cannot read property 'token' of undefined": "Cannot read property 'token' of undefined",
+	"View is valid, the query returned 1 register": "View is valid, the query returned 1 register",
+	"Query Builder5": "Query Builder5"
 }
