--- a/webapp/locales/pt_BR.json
+++ b/webapp/locales/pt_BR.json
@@ -973,8 +973,8 @@
 	"To import this file you need to have at least one view service": "Para importar este arquivo você precisa ter pelo menos um serviço de visualização",
 	"To upload your shapefile you have to create a .zip compressed file containing all the shapefile files (.shp, .dbf, .shx, etc). The size limit is 300 MB per file, therefore, neither of the shapefile files can be larger than 300 MB.": "Para realizar o upload do seu shapefile é necessário compactar os arquivos (.shp, .dbf, .shx, etc) em um arquivo .zip. O tamanho limite é de 300 MB por arquivo, portanto nenhum dos arquivos do shapefile podem ser maiores que 300 MB.",
 	"Tools": "Ferramentas",
-	"Transfer Shapefile": "Transferir Shapefile",
-	"Transfer GeoTIFF": "Transferir GeoTIFF",
+	"Transfer Shapefile": "Transferir Shapefile ...",
+	"Transfer GeoTIFF": "Transferir GeoTIFF ...",
 	"Tuesday": "Terça-feira",
 	"Type": "Tipo",
 	"Type a projetion": {
@@ -1121,21 +1121,40 @@
 	"DCP - PostGIS (N-Table)": "DCP - PostGIS (N-Tabelas)",
 	"Valid time interval": "Intervalo de tempo válido",
 	"Interpolation Registration": "Registro de interpolador",
-	"Vector Processing": "Vector Processing",
-	"Monitored object analysis - VP": "Monitored object analysis - VP",
-	"Vector Processing Data Series": "Vector Processing Data Series",
+	"Vector Processing": "Processamento Vetorial",
+	"Monitored object analysis - VP": "Análise de objeto monitorado - VP",
+	"Vector Processing Data Series": "Série de Dados do Processamento Vetorial",
 	"Operations": "Operações",
-	"Monitored Data Series": "Monitored Data Series",
-	"Monitored DataSeries": "Monitored DataSeries",
+	"Monitored Data Series": "Série de Dados Monitorados",
+	"Monitored DataSeries": "Série de Dado Monitorado",
 	"Table": "Tabela",
 	"Operator": "Operador",
 	"SQL Result": "Resultado(SQL)",
 	"Clause": "Cláusula",
-	"Table name already exists!":"Tabela/View já existe!",
-	"Table name not exists!":"Tabela/Views não existe!",
+	"Table name already exists!": "Tabela/View já existe!",
+	"Table name not exists!": "Tabela/Views não existe!",
 	"Custom Class Filter": "Filtros Customizados",
 	"not found.": "não encontrado.",
 	"Filename": "Filename",
 	"Descrição": "Descrição",
-	"Choose available table":"Escolher tabela no banco"
+	"Choose available table": "Escolher tabela no banco",
+	"Choose file on the data server": "Escolher arquivo no servidor de dados",
+	"File transfer to data server": "Transferência de arquivo para servidor de dados",
+	"Choose table in the database": "Escolher tabela no banco",
+	"File transfer to create table": "Transferência de arquivo para criar tabela",
+	"WFS": "WFS",
+	"Base Table/View Name": "Tabela/Nome da View",
+	"Query Builder Expression": "Query Builder Expression",
+	"Invalid query builder": "Query inválida",
+	"Query Builder": "Query Builder",
+	"Remove attributes configuration": "Remove attributes configuration",
+	"Attribute name": "Nome do Atributo",
+	"Visible": "Visível",
+	"Static Data Series": "Série de Dados Estáticos",
+	"Input Attribute Layer": "Atributos de Dados de Entrada",
+	"Output Attribute Layer": "Atributos de Dados de Saída",
+	"NetCDF ": {
+		"nc - GDAL": "NetCDF .nc - GDAL"
+	},
+	"WFS – Deter": "WFS – Deter"
 }
