correction in the translation of untranslated fields

--- a/webapp/locales/en_US.json
+++ b/webapp/locales/en_US.json
@@ -1188,9 +1188,9 @@
 	"View is valid, the query returned undefined register": "View is valid, the query returned undefined register",
 	"Cannot read property 'token' of undefined": "Cannot read property 'token' of undefined",
 	"View is valid, the query returned 1 register": "View is valid, the query returned 1 register",
-	"Query Builder5": "Query Builder5",
-	" Data Series5": " Data Series5",
-	"Dcp Data Series5": "Dcp Data Series5",
+	"Query Builder5": "Query Builder",
+	" Data Series5": " Data Series",
+	"Dcp Data Series5": "Dcp Data Series",
 	"View is valid, the query returned 9 registers": "View is valid, the query returned 9 registers",
 	"attributesSelect is not defined": "attributesSelect is not defined",
 	"View is valid, the query returned 344 registers": "View is valid, the query returned 344 registers",
