--- a/webapp/locales/en_US.json
+++ b/webapp/locales/en_US.json
@@ -1202,8 +1202,34 @@
 	"View is valid, the query returned 2 registers": "View is valid, the query returned 2 registers",
 	"No such file \"terrama2_service\" in directory": "No such file \"terrama2_service\" in directory",
 	"views": "views",
-	"Static Data Series":"Static Data Series",
-	"Input Attribute Layer":"Input Attribute Layer",
-	"Output Attribute Layer":"Output Attribute Layer",
-	"Visible":"Visible"
+	"Static Data Series": "Static Data Series",
+	"Input Attribute Layer": "Input Attribute Layer",
+	"Output Attribute Layer": "Output Attribute Layer",
+	"Visible": "Visible",
+	"Could not save data provider due": " insert or update on table \"data_providers\" violates foreign key constraint \"data_providers_project_id_fkey\"",
+	"Analysis Validation": "Analysis Validation",
+	"The following errors occurred while attempting to validate the analysis": "The following errors occurred while attempting to validate the analysis",
+	"storagerObject is not defined": "storagerObject is not defined",
+	"The Analysis seems valid": "The Analysis seems valid",
+	"Choose view in the database": "Choose view in the database",
+	"Create view from table": "Create view from table",
+	"Path5": "Path5",
+	"Error3": "Error3",
+	"The path informed is invalid": {
+		"": "The path informed is invalid."
+	},
+	"Save5": "Save5",
+	"Folder Name": "Folder Name",
+	"Select the File": "Select the File",
+	"Select the Folder": "Select the Folder",
+	"Invalid File": "Invalid File",
+	"Load attributes": "Load attributes",
+	"View is valid, the query returned 703 registers": "View is valid, the query returned 703 registers",
+	"Yes, update":"Yes, update",
+	"Attention":"Attention",
+	"This view already exists!\n Do you want to update it?":"This view already exists!\n Do you want to update it?",
+	"Move selected attributes to the right":"Move selected attributes to the right",
+	"Move all selected attributes to the right":"Move all selected attributes to the right",
+	"Move selected attributes to the left":"Move selected attributes to the left",
+	"Move all selected attributes to the left":"Move all selected attributes to the left"
 }
