--- a/webapp/locales/en_US.json
+++ b/webapp/locales/en_US.json
@@ -1172,7 +1172,8 @@
 		" syntax error at or near \"AS\"": "Error in query execution. syntax error at or near \"AS\"",
 		" syntax error at or near \"SELECT\"": "Error in query execution. syntax error at or near \"SELECT\"",
 		" cannot drop view mahatan_v because other objects depend on it": "Error in query execution. cannot drop view mahatan_v because other objects depend on it",
-		" cannot drop view other_view because other objects depend on it": "Error in query execution. cannot drop view other_view because other objects depend on it"
+		" cannot drop view other_view because other objects depend on it": "Error in query execution. cannot drop view other_view because other objects depend on it",
+		" syntax error at or near \"364\"": "Error in query execution. syntax error at or near \"364\""
 	},
 	"Cannot read property 'replace' of undefined": "Cannot read property 'replace' of undefined",
 	"Date/Time property": "Date/Time property",
@@ -1234,5 +1235,14 @@
 	"Move all selected attributes to the left": "Move all selected attributes to the left",
 	"Animated Wind": "Animated Wind",
 	"The colors must have unique values": "The colors must have unique values",
-	"Name of the view to be created":"Name of the view to be created"
+	"Name of the view to be created": "Name of the view to be created",
+	"View is valid, the query returned 1545 registers": "View is valid, the query returned 1545 registers",
+	"View name no exists!": "View name no exists!",
+	"View is valid, the query returned 640 registers": "View is valid, the query returned 640 registers",
+	"View is valid, the query returned 608 registers": "View is valid, the query returned 608 registers",
+	"View is valid, the query returned 35 registers": "View is valid, the query returned 35 registers",
+	"View is valid, the query returned 5 registers": "View is valid, the query returned 5 registers",
+	"View is valid, the query returned 18 registers": "View is valid, the query returned 18 registers",
+	"View is valid, the query returned 26 registers": "View is valid, the query returned 26 registers",
+	"Descrição": "Descrição"
 }
