--- a/webapp/locales/pt_BR.json
+++ b/webapp/locales/pt_BR.json
@@ -1205,6 +1205,5 @@
 	"O valor não é um número válido": "O valor não é um número válido",
 	"Minutos": "Minutos",
 	"Horas": "Horas",
-	"Dias": "Dias",
-	"Cannot read property 'semantics' of undefined": "Cannot read property 'semantics' of undefined"
+	"Dias": "Dias"
 }
