Fix Date Time Filter Bug

--- a/webapp/locales/en_US.json
+++ b/webapp/locales/en_US.json
@@ -303,6 +303,7 @@
 	"Date": "Date",
 	"Date (local time)": "Date (local time)",
 	"Date Time": "Date Time",
+	"Date (GMT time)": "Date (GMT time)",
 	"Days": "Days",
 	"Days Without Rain": "Days Without Rain",
 	"Dcp": "Dcp",
