--- a/webapp/locales/pt_BR.json
+++ b/webapp/locales/pt_BR.json
@@ -305,6 +305,7 @@
 	"DataProviderError: Could not save data provider due: project_id must be unique; name must be unique;  project_id: project_id must be unique,\nname: name must be unique": "Não foi possível salvar o servidor de dados, já existe um registro com o nome inserido, e o nome deve ser único.",
 	"Date": "Data",
 	"Date (local time)": "Data (horário local)",
+	"Date (GMT time)": "Data (horário GMT)",
 	"Date Time": "Data Hora",
 	"Days": "Dias",
 	"Days Without Rain": "Dias sem chuva",
