Changed version from b4.1.1 to b4.1.1-beta on config files

--- a/webmonitor/locales/pt.json
+++ b/webmonitor/locales/pt.json
@@ -6,7 +6,7 @@
   "ABOUT-TEXT-1": "A plataforma TerraMA² é um produto de software, um sistema computacional, baseado em arquitetura de serviços, aberta, que provê a infraestrutura tecnológica necessária ao desenvolvimento de sistemas operacionais para monitoramento de alertas de riscos ambientais.",
   "ABOUT-TEXT-2": "A TerraMA² é um software livre, podendo ser redistribuída e/ou modificada sob os termos da GNU Lesser General Public Licence versão 4 como publicado pela Free Software Foundation.",
   "ABOUT-TEXT-3": "Comentários, sugestões ou relato de problemas podem ser enviados para a equipe da TerraMA² (terrama2@dpi.inpe.br) da Divisão de Processamento de Imagens (DPI) do Instituto Nacional de Pesquisas Espaciais (INPE).",
-  "ABOUT-TEXT-4": "Versão da TerraMA²: 4.1.1",
+  "ABOUT-TEXT-4": "Versão da TerraMA²: 4.1.1-beta",
   "ABOUT-TEXT-5": "Versão da TerraLib: 5.4.5",
   "ABOUT-TEXT-6": "Data da versão: 17/Mai/2019",
   "ABOUT-TEXT-7": "Esta versão foi financiada pelo Banco Mundial TF018566 como parte integrante do Programa Cerrado, uma iniciativa de cooperação entre os governos do Brasil e do Reino Unido, com apoio do Banco Mundial. O Ministério do Meio Ambiente (MMA), por meio de sua Secretaria de Mudanças Climáticas e Qualidade Ambiental (SMCQ), é o responsável pela coordenação geral do programa. O objetivo da iniciativa é contribuir para a mitigação da mudança do clima e para melhoria da gestão de recursos naturais no bioma Cerrado por meio do aprimoramento de políticas públicas e de práticas de produtores rurais.",
