--- a/webapp/locales/en_US.json
+++ b/webapp/locales/en_US.json
@@ -50,7 +50,7 @@
 	"ABOUT-TEXT-1": "The TerraMA² platform is a software product, a computational system, based on services arquitecture, open source, that provides the tecnological infrastructure needed to develop operational systems for monitoring alerts of environmental risks.",
 	"ABOUT-TEXT-2": "TerraMA² it's an open source and free of charge software, available for distribution and modification under the terms of the GNU Lesser General Public Licence version 4, as published by the Free Software Foundation.",
 	"ABOUT-TEXT-3": "Comments, suggestions or problems can be submitted to the TerraMA² team (terrama2@dpi.inpe.br) at the Images Processing Division (DPI) at the Brazilian National Institute for Space Research (INPE).",
-	"ABOUT-TEXT-4": "TerraMA² Version: 4.1.1",
+	"ABOUT-TEXT-4": "TerraMA² Version: 4.1.2-beta",
 	"ABOUT-TEXT-5": "TerraLib Version: 5.4.5",
 	"ABOUT-TEXT-6": "Version Release Date: 17/05/2019",
 	"ABOUT-TEXT-7": "This version was funded by the World Bank TF018566 as part of the Programa Cerrado, an iniciative of cooperation between the British and Brazilian governments, with the support of the World Bank. The Brazilian Ministry of the Enviroment (MMA), through its Climate Change and Environmental Quality Secretariat (SMCQ), is responsible for the general coordination of the program. The objective of the iniciative is to contribute for the mitigation of climate change and the improvement of the management of natural resources in the Brazilian Cerrado, through enhancement of public politics and farmers practices.",
